# vmve

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  test.vmve  vmve.sln
MyEngineTest/: Main.cpp
Source/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Main.cpp  MyEngine.cpp  MyEngine.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
Source/Events/: Event.hpp  EventDispatcher.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
assets/: iss.mtl  satellite2.json
assets/shaders/: billboard.frag  billboard.vert  grid.frag  grid.vert  object.frag  object.vert  shadow_mapping.vert  skysphere.vert
assets/shaders/deferred/: geometry.frag  geometry.vert  lighting.frag
docs/documents/: milestone_6_screencast.pptx
docs/report/: refs.bib  report.acn  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.glo  report.ist  report.out  report.tex  report.toc
docs/report/attached_documents/: meetings.docx  user_feedback.xlsx
engine/: changelog.txt  engine.sln  engine.vcxproj  engine.vcxproj.filters
engine/include/: engine.h
engine/src/: engine.cpp  logging.cpp  logging.h  logging.hpp  pch.cpp  pch.h  pch.hpp  time.cpp  time.hpp  types.hpp  utility.cpp  utility.h  utility.hpp
engine/src/audio/: audio.cpp  audio.hpp
engine/src/core/: audio.h  command_line.cpp  input.cpp  input.h  input.hpp  platform_audio.h  platform_input.cpp  platform_input.h  platform_window.h  win32_window.cpp  win32_window.hpp  window.cpp  window.h  window.hpp
engine/src/core/linux/: wayland_window.cpp  x11_window.cpp
engine/src/core/macos/: cocoa_window.cpp
engine/src/core/platform/: win32_audio.cpp  win32_audio.h  win32_audio.hpp  win32_memory.cpp  win32_window.cpp  win32_window.h  windows.cpp  windows.hpp
engine/src/core/windows/: win32_audio.cpp  win32_memory.cpp  win32_memory.h  win32_window.cpp  win32_window.h
engine/src/events/: event.h  event.hpp  event_dispatcher.h  event_dispatcher.hpp  key_event.h  key_event.hpp  mouse_event.h  mouse_event.hpp  ui_event.hpp  window_event.h  window_event.hpp
engine/src/filesystem/: filesystem.cpp  filesystem.h  filesystem.hpp  vfs.cpp  vfs.h  vfs.hpp
engine/src/math/: math.h  math.hpp
engine/src/rendering/: camera.cpp  camera.h  camera.hpp  common.cpp  common.h  entity.cpp  entity.h  entity.hpp  material.cpp  material.h  material.hpp  model.cpp  model.h  model.hpp  renderer.h  ui.h  vertex.cpp  vertex.h  vertex.hpp
engine/src/rendering/directx/: d3d_context.cpp
engine/src/rendering/primitives/: cube.h
engine/src/rendering/shaders/: shaders.h  skysphereNew.frag  skysphereNew.vert
engine/src/rendering/terrain/: quad_tree.cpp  quad_tree.h
engine/src/rendering/ui/: ui.cpp  ui.h
engine/src/rendering/vulkan/: buffer.cpp  buffer.hpp  common.cpp  common.hpp  context.cpp  context.hpp  descriptor_sets.cpp  descriptor_sets.hpp  renderer.cpp  renderer.hpp  shader.cpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vulkan_context.cpp
engine/src/shaders/: shaders.hpp  shadow_mapping.vert  skysphere.frag
engine/src/shaders/deferred/: geometry.vert  lighting.frag
engine/src/ui/: compressed_fonts.cpp  compressed_fonts.hpp  ui.cpp  ui.h  ui.hpp
engine/src/utils/: logging.cpp  logging.h  time.cpp  time.h
my_engine_test/: main.cpp
sandbox/: Constants.hpp  Main.cpp  UI.hpp  constants.hpp  file.hpp  main.cpp  security.hpp  ui.hpp  variables.hpp  vmve.hpp
src/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Input.cpp  Input.hpp  Model.cpp  Model.hpp  PCH.cpp  PCH.hpp  Utility.hpp  Vertex.hpp  Window.cpp  Window.hpp  camera.cpp  camera.hpp  engine_platform.cpp  engine_platform.h  engine_platform.hpp  entity.cpp  entity.hpp  filesystem.cpp  filesystem.hpp  input.cpp  input.hpp  logging.cpp  logging.hpp  material.cpp  material.hpp  model.cpp  model.hpp  pch.cpp  pch.hpp  quaternion_camera.cpp  quaternion_camera.hpp  time.cpp  time.hpp  utility.cpp  utility.hpp  vertex.hpp  (+6 more)
src/Events/: EventDispatcher.hpp  KeyEvent.hpp  MouseEvent.hpp  UIEvent.hpp  WindowEvent.hpp
src/Renderer/: Buffer.cpp  Buffer.hpp  Common.hpp  Renderer.cpp  Renderer.hpp  RendererContext.cpp  RendererContext.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UI.cpp  UI.hpp  VertexArray.cpp  VertexArray.hpp
src/core/: command_line.cpp  command_line.hpp  input.cpp  input.hpp
src/events/: event.hpp  event_dispatcher.hpp  key_event.hpp  mouse_event.hpp  window_event.hpp
src/filesystem/: filesystem.cpp  filesystem.hpp  vfs.cpp
src/platform/: windows.cpp
src/renderer/: buffer.cpp  buffer.hpp  common.hpp  context.cpp  context.hpp  descriptor_sets.cpp  descriptor_sets.hpp  renderer.cpp  renderer.hpp  renderer_context.cpp  renderer_context.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp  vertex_array.cpp  vertex_array.hpp
src/rendering/: camera.cpp  camera.hpp  common.hpp  entity.cpp  entity.hpp  material.cpp  material.hpp  model.cpp  model.hpp  ui.cpp  ui.hpp  vertex.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/rendering/vulkan/: buffer.cpp  buffer.hpp  common.hpp  context.cpp  context.hpp  descriptor_sets.cpp  descriptor_sets.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/shaders/: geometry.frag  geometry.vert  grid.frag  grid.vert  object.frag  object.vert  skysphere.frag  skysphere.vert
src/ui/: ui.cpp  ui.hpp
vmve/: example.vmve  example_new.vmve  logs.txt  resource.h  vmve.aps  vmve.rc  vmve.sln  vmve.vcxproj  vmve.vcxproj.filters  vmve_settings.txt
vmve/assets/models/: skybox_sphere.mtl
vmve/assets/models/example_1/: credit.txt
vmve/assets/models/example_2/: pirozhok_low.FBX
vmve/assets/models/example_3/: DunnottarCastle.mtl
vmve/assets/models/example_4/: terrain.mtl
vmve/assets/vmve_models/: credit.txt
vmve/src/: config.h  main.cpp  misc.cpp  misc.h  misc.hpp  pch.h  security.cpp  security.h  security.hpp  settings.cpp  settings.h  ui.cpp  ui.hpp  vmve.cpp  vmve.h  vmve.hpp
vmve/src/ui/: ui.cpp  ui.h  ui.hpp  ui_fonts.cpp  ui_fonts.h  ui_fonts.hpp  ui_icons.cpp  ui_icons.h
(+57 files in other folders)
